Add desktop modal styling

--- a/index.css
+++ b/index.css
@@ -523,6 +523,35 @@ form {
 
 /* Large screen devices */
 @media screen and (min-width: 992px) {
+  .modal-content {
+    margin: 2% 6%;
+    padding: 24px;
+  }
+
+  .modal-overlay {
+    filter: blur(24px);
+  }
+
+  .modal-blocks {
+    display: grid;
+    grid-template-columns: auto auto;
+    margin: 3% 0;
+    justify-content: space-between;
+  }
+
+  .modal-left-block {
+    margin-right: 24px;
+  }
+
+  .modal-footer {
+    justify-content: flex-start;
+  }
+
+  .modal-right-block {
+    width: 100%;
+    align-items: flex-start;
+  }
+
   .header-1 {
     font-size: 48px;
     line-height: 60px;
