--- a/index.css
+++ b/index.css
@@ -537,6 +537,10 @@ form {
   overflow: hidden;
 }
 
+.divider {
+  border: 1px solid #ebecf0;
+}
+
 /* Large screen devices */
 @media screen and (min-width: 992px) {
   .modal-content {
