--- a/index.css
+++ b/index.css
@@ -160,13 +160,13 @@ p {
 
 /* Layout */
 .app-bar {
-  height: 48px;
   position: fixed;
+  top: 0;
+  height: 48px;
   width: 100%;
   z-index: 2;
   display: flex;
   align-items: center;
-  top: 0;
 }
 
 .logo {
@@ -470,29 +470,26 @@ form {
 .modal {
   position: fixed;
   top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
   overflow: auto;
-  z-index: 4;
   background-blend-mode: multiply;
+  z-index: 999;
 }
 
 .modal-dialog {
   display: flex;
   flex-grow: 1;
-  padding: 16px 0;
   justify-content: center;
   align-items: center;
 }
 
 .modal-content {
-  margin: auto 16px;
+  margin: 16px;
   border-radius: 16px;
   padding: 18px 16px;
   box-sizing: border-box;
   border: 1px solid #dfe1e6;
-  z-index: 5;
   box-shadow: 0 48px 48px rgba(37, 47, 137, 0.08);
 }
 
