--- a/index.css
+++ b/index.css
@@ -627,6 +627,7 @@ form {
     }
   }
 
+  /* Created by Usman Suleiman */
   .contact-me {
     padding: 10% 25%;
     border-top-left-radius: 160px;
