--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-/* Support older browsers */
+/*U Support older browsers */
 article,
 aside,
 details,
@@ -30,7 +30,7 @@ body {
   position: relative;
 }
 
-/* Typography */
+/*S Typography */
 body,
 h1,
 h2,
@@ -109,7 +109,7 @@ p {
   font-weight: 600;
 }
 
-/* Colors */
+/*M Colors */
 .color-b300 {
   color: #7f8cff;
 }
@@ -158,7 +158,7 @@ p {
   filter: drop-shadow(0 0 16px rgba(64, 83, 252, 0.24));
 }
 
-/* Layout */
+/*A Layout */
 .app-bar {
   position: fixed;
   top: 0;
@@ -520,7 +520,7 @@ form {
   justify-content: center;
 }
 
-/* Spacing */
+/*N Spacing */
 .mt-12 {
   margin-top: 12px;
 }
