--- a/index.css
+++ b/index.css
@@ -280,11 +280,17 @@ p {
   box-sizing: border-box;
 }
 
+.profile-image {
+  width: 150px;
+  height: 150px;
+  border-radius: 75px;
+}
+
 .headline {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 40% 24px;
+  padding: 18% 24px;
   margin-top: 48px;
   border-bottom-left-radius: 80px;
   background-image: url(images/headline-background-image.svg);
@@ -622,7 +628,7 @@ form {
   }
 
   .headline {
-    padding: 20% 25%;
+    padding: 5% 25% 8% 25%;
     background-image: url(images/header-shapes-desktop.svg);
     background-position: center;
     background-size: contain;
